apps/xwiki/overlays/integration/patch-probes.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: xwiki
spec:
  template:
    spec:
      containers:
        - name: xwiki
          readinessProbe:
            httpGet:
              path: /bin/view/Main/
              port: 8080
              httpHeaders:
              - name: Host
                value: xwiki.integration.nudger.logo-solutions.fr
            initialDelaySeconds: 180
            timeoutSeconds: 10
            periodSeconds: 20
            failureThreshold: 30
          livenessProbe:
            httpGet:
              path: /bin/view/Main/
              port: 8080
              httpHeaders:
              - name: Host
                value: xwiki.integration.nudger.logo-solutions.fr
            initialDelaySeconds: 240
            timeoutSeconds: 10
            periodSeconds: 30
            failureThreshold: 10
