apps/xwiki/overlays/integration/xwiki-image-patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: xwiki
spec:
  template:
    spec:
      containers:
        - name: xwiki
          image: xwiki:17.4.0   # <--- version à bumper
