apps/xwiki/overlays/integration/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: xwiki
  namespace: ns-open4goods-integration
spec:
  rules:
    - host: xwiki.integration.nudger.logo-solutions.fr   # 👈 différent
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: xwiki-svc
                port:
                  number: 8080
